# fleet-management

./: README.md  check-actual-schema.sh  check-db.sh  insert-sample-data.sh  quick-setup.sh
backend/: CMakeLists.txt  fleet_management  output.txt
backend/src/: main.cpp
backend/src/core/: driver.h  user.h  vehicle.h
backend/src/data_structures/: auth_system.h  btree.h  driver_queue.h  graph.h  hash_table.h  min_heap.h
docs/: QUICK-START.md  README-DEPLOYMENT.md
frontend/: .env.example  .gitignore  README.md  fix_trips_table.sql  migrate.js  nohup.out  package-lock.json  package.json
frontend/public/: add-vehicle.html  admin-fuel-new.html  admin-fuel.html  drivers.html  employee-dashboard.html  employee-fuel-new.html  employee-fuel.html  employee-trips.html  employee-vehicle.html  fuel.html  index.html  login.html  maintenance.html  pending.html  signup.html  trips-backup-old.html  trips.html  vehicles.html
frontend/public/components/: employee-sidebar.html  sidebar.html
frontend/public/css/: auth-styles.css  mobile-responsive.css
frontend/src/: app.js  users.json
scripts/: deploy-ec2.sh
tests/: test_trip.js
